objects/AppointmentContact__c.object
<CustomObject><fields>
        <fullName>Active_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Term</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>AppointmentSlot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Appointment Slot</label>
        <referenceTo>Counsellor_Availability__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointment_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>AppointmentType__c</fullName>
        <formula>AppointmentSlot__r.AppointmentType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Appointment_Week__c</fullName>
        <formula>MOD(FLOOR( (DATEVALUE(Date_Time__c) -DATEVALUE("2016-07-31" ))/7),52)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>CASA_48_hr_Trigger__c</fullName>
        <formula>Start_Date__c &gt; (TODAY() + 2)</formula>
        <label>CASA 48 hr Trigger</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CASA_Appointment__c</fullName>
        <description>Tag CASA Appointments</description>
        <formula>AppointmentSlot__r.CASA_Appointment__c</formula>
        <label>CASA Appointment</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CASA_Staff__c</fullName>
        <formula>IF(  RecordType.Name  = "CASA Appointment"  , AppointmentSlot__r.Coach_Full_Name__c , "Not a CASA Appointment")</formula>
        <label>CASA Staff</label>
        <type>Text</type>
    </fields><fields>
        <fullName>CWID__c</fullName>
        <formula>Contact__r.CWID__c</formula>
        <label>CWID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Canceled_Date_Time__c</fullName>
        <description>Captures time stamp when the appointment has been cancelled</description>
        <label>Canceled Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Center__c</fullName>
        <inlineHelpText>This field will get updated by the workflow on creation of the appointment</inlineHelpText>
        <label>Center</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>CheckOutTime__c</fullName>
        <label>Check Out Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Coach_Specialty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coach Specialty</label>
        <referenceTo>Specialty__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Consultant_Email__c</fullName>
        <description>DFCT0011067 - Send the same template that is sent to the student to the Consultant - used in email templates</description>
        <label>Consultant Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is in addition to Slot lookup so that Consultant  can be given access to the Appointment to take actions. This need to be autopopulated using automation</description>
        <label>Consultant</label>
        <referenceTo>Consultant__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.Full_Name__c</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointment_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contacts_To_Notify__c</fullName>
        <description>STRY0012151: Captures the contact Ids(semicolon separated) who should be notified once the appointment status is changed to completed.</description>
        <label>Contacts To Notify</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Date_Time__c</fullName>
        <formula>AppointmentSlot__r.Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>DropInUsedTime__c</fullName>
        <formula>( CheckOutTime__c -  CheckInTime__c )* 24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drop In Used Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>FirstLanguage__c</fullName>
        <label>First Language</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Group_Assignment__c</fullName>
        <label>Group Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Half_Hour_After_Start_Time__c</fullName>
        <formula>Date_Time__c + 30/1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Half Hour After Start Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>LWC_AcademicSkills__c</fullName>
        <label>Academic Skills To Work on</label>
        <picklist>
            <picklistValues>
                <fullName>Class preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test taking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note taking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study strategies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>LWC_ContributeToPerformance__c</fullName>
        <label>Contribute to Performance</label>
        <picklist>
            <picklistValues>
                <fullName>Missing class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor time management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of foundation knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over involved/Work/Too many credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficulty with instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-native speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing course material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of these</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>LWC_CurrentGradeofCourse__c</fullName>
        <label>Current Grade/Score of Course</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>LWC_HESITutee__c</fullName>
        <label>HESI/Tutee</label>
        <picklist>
            <picklistValues>
                <fullName>Professor calculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guesstimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My own calculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don't know</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>LWC_HourStudy__c</fullName>
        <label>Number of Hour Preparation</label>
        <picklist>
            <picklistValues>
                <fullName>1-2 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-8 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9&gt; hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>LWC_LearningStyles__c</fullName>
        <label>Learning Styles</label>
        <picklist>
            <picklistValues>
                <fullName>Visual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kinesthetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>LWC_MethodOfStudy__c</fullName>
        <label>Method Of Study</label>
        <picklist>
            <picklistValues>
                <fullName>Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Take/Review notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating study guides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review class handouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pneumonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>LWC_TutorTuteeExpectation__c</fullName>
        <label>Tutor Tutee Expectation</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>LWC_TutorTutee__c</fullName>
        <label>Interaction with professor</label>
        <picklist>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A few times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regularly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don't know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <description>Notes provided by the student during appointment scheduling (LWC)</description>
        <label>Background Notes (Visible to Students)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Phone__c</fullName>
        <description>Student Phone from Banner</description>
        <formula>Contact__r.Phone</formula>
        <inlineHelpText>Student Phone from Banner</inlineHelpText>
        <label>Phone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Preferred_Phone__c</fullName>
        <inlineHelpText>Phone received from the student when booking an appointment</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Reason_for_Meeting__c</fullName>
        <label>Appointment Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing / Residence Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence / Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major / Minor Exploration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Abroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Student Survey</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <picklist>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent / Guardian</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Referrer_Name__c</fullName>
        <label>Referrer Name</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>SelectedCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Self_Reported_Email__c</fullName>
        <label>Self-Reported Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Staff_Email__c</fullName>
        <description>Supports CASA appointment confirmation email functionality</description>
        <formula>AppointmentSlot__r.Availability__r.Coach__r.Email</formula>
        <label>Staff Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Staff__c</fullName>
        <description>Supports the email template functionality (CASA and LWCl)</description>
        <formula>AppointmentSlot__r.Coach_Full_Name__c</formula>
        <label>Staff</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <formula>AppointmentSlot__r.StartDate__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Start_Time__c</fullName>
        <formula>IF(
  OR(
    VALUE( MID( TEXT( AppointmentSlot__r.Start_Time__c - 7), 12, 2 ) ) = 0,
    VALUE( MID( TEXT( AppointmentSlot__r.Start_Time__c - 7), 12, 2 ) ) = 12
  ),
  "12",
  TEXT( VALUE( MID( TEXT( AppointmentSlot__r.Start_Time__c - 7), 12, 2 ) ) 
   -
   IF( 
     VALUE( MID( TEXT( AppointmentSlot__r.Start_Time__c - 7), 12, 2 ) ) &lt; 12, 
     0, 
     12 
   ) 
  )
)
&amp; ":" &amp;
MID( TEXT( AppointmentSlot__r.Start_Time__c - 7), 15, 2 )
&amp; " " &amp;
IF(
  VALUE( MID( TEXT( AppointmentSlot__r.Start_Time__c - 7), 12, 2 ) ) &lt; 12,
  "AM",
  "PM"
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Time_Trigger_15__c</fullName>
        <description>This field will be used for Missed Appointment By Student Workflow Rule. Should not be displayed on pagelayouts</description>
        <formula>Date_Time__c - 0.03109</formula>
        <label>Time Trigger 15</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Zoom__c</fullName>
        <formula>AppointmentSlot__r.Availability__r.Coach__r.Contact.hed__WorkPhone__c</formula>
        <label>Zoom</label>
        <type>Text</type>
    </fields><fields>
        <fullName>CheckInTime__c</fullName>
        <label>Check In Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Checked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked In</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Location_Change__c</fullName>
        <label>Location Change</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Checked-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed by Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Notes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Strike__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strike</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone/Online</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Appointment</label><nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Appointments</pluralLabel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>SelectedCourse__c</columns>
        <columns>Strike__c</columns>
        <columns>Center__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>All_LWC_Appointments</fullName>
        <columns>NAME</columns>
        <columns>AppointmentType__c</columns>
        <columns>Center__c</columns>
        <columns>SelectedCourse__c</columns>
        <columns>Location__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Staff__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Strike__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AppointmentContact__c.LWC_Appointment</value>
        </filters>
        <label>All LWC Appointments</label>
        <sharedTo>
            <role>ITS_Staff</role>
            <role>LWC_Admin</role>
            <role>LWC_Front_Desk</role>
            <role>LWC_Learning_Lead</role>
            <role>LWC_Speaking_Lead</role>
            <role>LWC_Writing_Lead</role>
        </sharedTo>
    </listViews><listViews>
        <fullName>Needs_Notes</fullName>
        <columns>NAME</columns>
        <columns>Staff__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>CWID__c</columns>
        <columns>Date_Time__c</columns>
        <columns>Reason_for_Meeting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Needs Notes</value>
        </filters>
        <label>Needs Notes</label>
        <sharedTo>
            <role>CASA_Staff</role>
            <role>ITS_Staff</role>
        </sharedTo>
    </listViews><listViews>
        <fullName>Pending_Appointment</fullName>
        <columns>NAME</columns>
        <columns>Staff__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>CWID__c</columns>
        <columns>Date_Time__c</columns>
        <columns>Reason_for_Meeting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending Appointment</label>
        <sharedTo>
            <role>CASA_Staff</role>
            <role>ITS_Staff</role>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>CASA_Appointment</fullName>
        <active>true</active>
        <label>CASA Appointment</label>
    </recordTypes><recordTypes>
        <fullName>LWC_Appointment</fullName>
        <active>true</active>
        <label>LWC Appointment</label>
    </recordTypes></CustomObject>